--- a/agora-phone/build.gradle
+++ b/agora-phone/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion rootProject.compileVersion
@@ -9,7 +11,6 @@ android {
         targetSdkVersion rootProject.targetVersion
         versionCode 1
         versionName "1.0.1"
-        consumerProguardFiles 'consumer-proguard-rules.pro'
 
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -29,6 +30,7 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            consumerProguardFiles 'consumer-proguard-rules.pro'
         }
     }
 
@@ -53,3 +55,6 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
 
 }
+
+group = 'wang.unclecat'
+apply from: '../maven-release-aar.gradle'
