--- a/agora-phone/build.gradle
+++ b/agora-phone/build.gradle
@@ -21,9 +21,14 @@ android {
     lintOptions {
         abortOnError false
     }
+
     compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
     buildTypes {
@@ -39,18 +44,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.gson:gson:2.2.4'
+    implementation 'com.tinder.statemachine:statemachine:0.2.0'
 
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    annotationProcessor 'org.projectlombok:lombok:1.18.10'
-    // --=[ FSM ]=--
-    implementation('org.squirrelframework:squirrel-foundation:0.3.8') {
-        exclude(group: 'javaassist', module: 'javassist')
-        exclude(group: 'dom4j', module: 'dom4j')
-        exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
-        exclude(group: 'log4j', module: 'log4j')
-        exclude(group: 'org.mvel', module: 'mvel2')
-        exclude(group: 'com.google.code.gson', module: 'gson')
-    }
     // --=[ logger facade ]=--
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
 
